--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
                      <!--HEADER-->
   <header class="header">
+    <div class="container">
     <nav class="nav-header">
       <a class="logo" href="./index.html">Web<span class="logo-style">Studio</span></a>
       
@@ -36,17 +37,21 @@
         <li class="contacts-list"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
+    </div>
   </header>
                     <!--MAIN-->
   <main class="main">
                      <!--BUTTON-->
     <section class="button-section">
+      <div class="container">
       <h1 class="headline"> Effective Solutions
       for Your Business</h1>
       <button class="butn" type="button">Order Service</button>
+      </div>
     </section>
                     <!--GOALS-->
     <section class="goal-section">
+      <div class="container">
       <h2 hidden>Goasl</h2>
       
        <ul class="goals-list">
@@ -68,9 +73,11 @@
           <p class="title-goal-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
       </ul>
+      </div>
     </section>
                    <!--OUR TEAM-->
     <section class="team-section">
+      <div class="container">
       <h2 class="text-team">Our Team</h2>
       <ul class="team-list">
         <li class="bordered-team">
@@ -94,9 +101,11 @@
               <p class="our-name-p">UI Designer</p>
         </li>
       </ul>
+      </div>
     </section>
                 <!--OUR PORTFOLIO-->
     <section class="portfolio-section">
+      <div class="container">
       <h2 class="title-portfolio">Our Portfolio</h2>
       <ul>
         <li class="portfolio-list">
@@ -130,14 +139,17 @@
               <p class="apps-p">Marketing</p>
         </li>
       </ul>
+      </div>
     </section>
   </main>
                    <!--FOOTER-->
   <footer class="footer">
+    <div class="container">
     <a class="logo-footer" href="./index.html">Web<span class="logo-footer-style">Studio</span></a>
     <p class="footer-text">
       Increase the flow of customers and  sales for your business with digital marketing & growth solutions.
     </p>
+    </div>
   </footer>
 
   </body>
