--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
                      <!--HEADER-->
   <header class="header">
-    <div class="container">
+    <div class="container header-container">
     <nav class="nav-header">
       <a class="logo" href="./index.html">Web<span class="logo-style">Studio</span></a>
       
@@ -50,8 +50,9 @@
       </div>
     </section>
                     <!--GOALS-->
+
     <section class="goal-section">
-      <div class="container">
+      <div class="container goals-container">
       <h2 hidden>Goasl</h2>
       
        <ul class="goals-list">
@@ -105,38 +106,50 @@
     </section>
                 <!--OUR PORTFOLIO-->
     <section class="portfolio-section">
-      <div class="container">
+      <div class="container portfolio-container">
       <h2 class="title-portfolio">Our Portfolio</h2>
-      <ul>
+      <ul class="portfolio-item">
         <li class="portfolio-list">
           <img src="./images/portfolio/banking-app.jpg" alt="Banking App" width="360" height="300" />
-            <h3 class="apps">Banking App</h3>
+          <div class="border-apps">
+          <h3 class="apps">Banking App</h3>
               <p class="apps-p">App</p>
+          </div> 
         </li>
         <li class="portfolio-list">
           <img src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
-            <h3 class="apps">Cashless Payment</h3>
+          <div class="border-apps">
+          <h3 class="apps">Cashless Payment</h3>
               <p class="apps-p">Marketing</p>
+          </div> 
         </li>
         <li class="portfolio-list">
           <img src="./images/portfolio/meditation-app.jpg" alt="Meditation App" width="360" height="300" />
-            <h3 class="apps">Meditation App</h3>
+          <div class="border-apps">
+          <h3 class="apps">Meditation App</h3>
               <p class="apps-p">App</p>
+          </div> 
         </li>
         <li class="portfolio-list">
           <img src="./images/portfolio/taxi-service.jpg" alt="Taxi Service" width="360" height="300" />
-            <h3 class="apps">Taxi Service</h3>
+          <div class="border-apps">
+          <h3 class="apps">Taxi Service</h3>
               <p class="apps-p">Marketing</p>
+          </div> 
         </li>
         <li class="portfolio-list">
           <img src="./images/portfolio/screen-illustrations.jpg" alt="Screen Illustrations" width="360" height="300" />
-            <h3 class="apps">Screen Illustrations</h3>
+          <div class="border-apps">
+          <h3 class="apps">Screen Illustrations</h3>
               <p class="apps-p">Design</p>
+          </div> 
         </li>
         <li class="portfolio-list">
           <img src="./images/portfolio/online-courses.jpg" alt="Online Courses" width="360" height="300" />
-            <h3 class="apps">Online Courses</h3>
+          <div class="border-apps">
+           <h3 class="apps">Online Courses</h3>
               <p class="apps-p">Marketing</p>
+            </div> 
         </li>
       </ul>
       </div>
@@ -144,7 +157,7 @@
   </main>
                    <!--FOOTER-->
   <footer class="footer">
-    <div class="container">
+    <div class="container container-footer">
     <a class="logo-footer" href="./index.html">Web<span class="logo-footer-style">Studio</span></a>
     <p class="footer-text">
       Increase the flow of customers and  sales for your business with digital marketing & growth solutions.
