--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section class="goal-section">
       <div class="container goals-container">
-      <h2 hidden>Goasl</h2>
+      <h2 class="visually-hidden">Goasl</h2>
       
        <ul class="goals-list">
         <li class="goals-list-item">
@@ -83,23 +83,31 @@
       <ul class="team-list">
         <li class="bordered-team">
           <img src="./images/team/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
-            <h3 class="our-name">Mark Guerrero</h3>
+            <div class="border-title">
+           <h3 class="our-name">Mark Guerrero</h3>
               <p class="our-name-p">Product Designer</p>
+          </div>
         </li>
         <li class="bordered-team">
           <img src="./images/team/tom.jpg" alt="Tom Ford" width="264" height="260" />
-            <h3 class="our-name">Tom Ford</h3>
+          <div class="border-title">  
+           <h3 class="our-name">Tom Ford</h3>
               <p class="our-name-p">Frontend Developer</p>
+          </div>
         </li>
         <li class="bordered-team">
           <img src="./images/team/camila.jpg" alt="Camila Garcia" width="264" height="260" />
-            <h3 class="our-name">Camila Garcia</h3>
+          <div class="border-title">
+           <h3 class="our-name">Camila Garcia</h3>
               <p class="our-name-p">Marketing</p>
+          </div>
         </li>
         <li class="bordered-team">
           <img src="./images/team/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <h3 class="our-name">Daniel Wilson</h3>
+          <div class="border-title">
+           <h3 class="our-name">Daniel Wilson</h3>
               <p class="our-name-p">UI Designer</p>
+          </div>
         </li>
       </ul>
       </div>
