--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </address>
     </div>
   </header>
-                    <!--MAIN-->
+                  
   <main class="main">
-                     <!--BUTTON-->
+                     <!--BUTTON-1-->
     <section class="button-section">
       <div class="container">
       <h1 class="headline"> Effective Solutions
@@ -49,11 +49,11 @@
       <button class="butn" type="button">Order Service</button>
       </div>
     </section>
-                    <!--GOALS-->
+                    <!--GOALS-2-->
 
     <section class="goal-section">
       <div class="container goals-container">
-      <h2 class="visually-hidden">Goasl</h2>
+      <h2 class="hiden"><span class="visually-hidden">Goasl</span></h2>
       
        <ul class="goals-list">
         <li class="goals-list-item">
@@ -76,7 +76,7 @@
       </ul>
       </div>
     </section>
-                   <!--OUR TEAM-->
+                   <!--OUR TEAM-3-->
     <section class="team-section">
       <div class="container">
       <h2 class="text-team">Our Team</h2>
