--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section class="goal-section">
       <div class="container goals-container">
-      <h2 class="hiden"><span class="visually-hidden">Goasl</span></h2>
+      <h2 class="visually-hidden">Goasl</h2>
       
        <ul class="goals-list">
         <li class="goals-list-item">
